[package]
name = "delivery_order"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlsxwriter = "0.3.5"
async-std = { version = "1.10.0", features = ["attributes", "std"] }
encoding_rs = "0.8.30"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
color-eyre = "0.5.11"
aopt = "0.4.4"